--- a/alquilerVehiculos/package.json
+++ b/alquilerVehiculos/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "sass": "^1.55.0"
   },
   "devDependencies": {
