--- a/alquilerVehiculos/package.json
+++ b/alquilerVehiculos/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "dayjs": "^1.11.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-calendar": "^3.9.0",
